# senderfinalbot

./: README.md  pyproject.toml  schema.sql
agents/: agents.json
scripts/: generate_agents.py
senderbot/: __init__.py  agents.py  cli.py  config.py  db.py  extraction.py  job_manager.py  session_manager.py
senderbot/ui/: __init__.py  bot.py
tests/: conftest.py  test_integration.py  test_job_manager.py  test_session_login.py  test_username_extraction.py
